# store-visit-backend

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  exceptions.py  main.py  pyproject.toml  pytest.ini  requirements.txt  script_create_orders.py  script_create_users.py
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 20230901_82b384d0c544_create_orders_visits.py  20230901_bf983eebfb5c_update_users.py  20230901_cecd88cc07aa_create_user_models.py  20230902_0c7d11e0af04_add_password_users.py
api/: api.py  depends.py
api/crm/: crm_endpoints.py
api/customer/: auth_endpoints.py  customer_endpoints.py
core/: config.py  constants.py  jwt_tokens.py
engines/: auth_engines.py  order_engines.py
middlewares/: __init__.py  add_process_time_header.py
resource_access/: db_base.py  db_base_class.py  db_session.py
resource_access/db_models/: order_models.py  user_models.py
resource_access/repositories/: order_repos.py  user_repos.py
schemas/: auth_schemas.py  enums.py  order_schemas.py  user_schemas.py
tests/: conftest.py
tests/api/: test_customer_endpoints.py
tests/fixtures/: common_fixtures.py  common_setup.py  dependency_overrides.py  order_fixtures.py  user_fixtures.py
usecases/: crm_usecases.py  customer_usecases.py
